fix(course): complete five-story workflows and add real MySQL acceptance